# AIGC

./: .gitignore  pyproject.toml
MMLU/: evaluate_models.py  extract_parquet.py  requirements.txt  translate_to_chinese.py
MMLU/dataset/: business_ethics-test-00000-of-00001.parquet
MMLU/dataset/extracted_data/: astronomy-test-00000-of-00001.csv  business_ethics-test-00000-of-00001.csv  chinese-test-00000-of-00001.csv
MMLU/results/: combined_results.csv
langchain输出解析器/: custom_callback_handler.py  custom_output_parser.py  datetime_output_parser.py  enum_output_parser.py
random_tools/: build_exe.bat  gui_enhanced.py  participants.json  random_picker.html  random_picker_enhanced.html  requirements.txt
四组数据打标/: parseExcel.py  数据标注.xlsx  数据标注_更新.xlsx
本科专业分类 csv/: 2025年本科专业目录.csv  2025年本科专业目录_含介绍.csv  2025年本科专业目录_含标准专业介绍.csv  run.py  专业大类.json
自定义LLM 方法/: call_api.py
