[project]
name = "aigc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "notebook>=7.5.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
]
